# cityrade-st

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
cityrade-macros/: Cargo.toml
cityrade-types/: Cargo.toml
cityrade-types/src/: account.rs  building.rs  chat.rs  city.rs  generator.rs  item.rs  lib.rs  map.rs  market.rs  plugin.rs  population.rs  resources.rs  technology.rs  world.rs
src/: client.rs  dropguard.rs  main.rs  server.rs
src/client/: i18n.rs  mod.rs
src/server/: mod.rs
