[package]
name = "cityrade"
version = "0.1.0"
edition = "2024"

[dependencies]
cityrade-types = { path = "cityrade-types" }
cityrade-macros = { path = "cityrade-macros" }
dioxus = "0.6.3"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
tungstenite = { version = "0.26.2", features = ["rustls"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
color-eyre = "0.6.3"
color-backtrace = "0.7.0"
tokio-tungstenite = { version = "0.26.2", features = ["rustls"] }
futures-util = "0.3.31"
crossterm = "0.28.1"
ratatui = "0.29.0"
anyhow = "1.0.97"
